Nuevo boton para el sol

--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,14 @@ body{
     a:nth-child(3){
         filter: hue-rotate(110deg);
     }
+    a:nth-child(5){
+        filter: hue-rotate(2050deg);
+    }
     a:nth-child(4){
         filter: hue-rotate(050deg);
     }
-    a:nth-child(5){
-        filter: hue-rotate(2050deg);
+    a:nth-child(6){
+        filter: hue-rotate(1050deg);
     }
 	a:hover{
      background: #03e9f4;
